# rt

./: .gitignore  .gitmodules  CMakeLists.txt
contrib/: CMakeLists.txt
src/: CMakeLists.txt
src/accel/: CMakeLists.txt  accel.h  bvh.c  bvh.h
src/bvh/: CMakeLists.txt  build.c  bvh.c  bvh.h  collapse.c  intersect.c  tri.c  tri.h
src/core/: CMakeLists.txt  alloc.c  alloc.h  bbox.h  config.h.in  hash.h  hash_table.c  hash_table.h  image.h  mat3.h  mat4.h  mat4x3.h  mem_pool.c  mem_pool.h  morton.h  parallel.c  parallel.h  parallel_for.c  parallel_for.h  primes.h  quad.c  quad.h  radix_sort.c  radix_sort.h  random.h  ray.h  rgb.h  rgba.h  thread_pool.c  thread_pool.h  tri.c  tri.h  utils.h  vec2.h  vec3.h  vec4.h
src/frontend/: CMakeLists.txt  main.c
src/io/: CMakeLists.txt  import_obj.c  import_obj.h  obj_model.c  obj_model.h  png_image.c  png_image.h
src/loaders/: CMakeLists.txt  obj.c  obj.h
src/render/: CMakeLists.txt  debug.c  integrators.h  render.h  render_debug.c
src/scene/: CMakeLists.txt  attr.h  bsdf.c  bsdf.h  camera.c  camera.h  geometry.c  geometry.h  image.h  load.c  material.h  mesh.c  mesh.h  scene.c  scene.h  texture.h
test/: CMakeLists.txt  mandelbrot.c  sort.c  thread_pool_recreate.c  thread_pool_reuse.c
